--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="touming" >#1e000000</color>
-    <color name="menu_color">#FAFAFA</color>
+    <color name="touming" >#00000000</color>
+    <color name="menu_color">#f9f9f9</color>
     <color name="white">#FFFFFF</color>
 </resources>
