--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="touming" >#00000000</color>
     <color name="menu_color">#f9f9f9</color>
     <color name="white">#FFFFFF</color>
+    <color name="black_opacity">#32000000</color>
 </resources>
