--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
                 android:paddingHorizontal="10dp"
                 android:orientation="horizontal">
                 <LinearLayout
+                    android:onClick="toSingersActivity"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_weight="1"
@@ -230,10 +231,11 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-            <include layout="@layout/songs_layout"></include>
+            <include layout="@layout/songs_layout" android:id="@+id/guanfang"></include>
 
-            <include layout="@layout/songs_layout"></include>
+            <include layout="@layout/songs_layout" android:id="@+id/daren"></include>
 
+            <include layout="@layout/songs_layout" android:id="@+id/zuixinzhuanji"></include>
 
         </LinearLayout>
     </ScrollView>
