实现搜索页面

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/menu_color"
     tools:context=".activity.SearchActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/goback"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/left_arrow">
 
-</android.support.constraint.ConstraintLayout>
+        </ImageView>
+        <SearchView
+            android:id="@+id/qq_search_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:queryHint="@string/searchBarHint"
+            android:iconifiedByDefault="false">
+
+        </SearchView>
+    </LinearLayout>
+
+</LinearLayout>
