--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -2,25 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-<!--    <android.support.v7.widget.CardView-->
-<!--        android:id="@+id/card_view"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        card_view:cardCornerRadius="4dp"-->
-<!--        card_view:cardUseCompatPadding="true">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/title"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:gravity="center"-->
-<!--            android:padding="10dp"-->
-<!--            android:textColor="@android:color/black"-->
-<!--            android:textSize="18sp" />-->
-<!--    </android.support.v7.widget.CardView>-->
+    android:orientation="horizontal"
+    android:paddingBottom="20dp"
+    android:paddingHorizontal="10dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -36,9 +20,10 @@
         <TextView
             android:id="@+id/searchSingerName"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:textSize="30px"/>
     </LinearLayout>
     <ImageView
         android:layout_width="0dp"
