--- a/app/src/main/res/layout/fragment_search_video.xml
+++ b/app/src/main/res/layout/fragment_search_video.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragment.SearchVideoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
+        android:id="@+id/searchVideoRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
