--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
 
 
                 <TextView
+                    android:onClick="toPage"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:textAlignment="center"
@@ -239,5 +240,8 @@
 
         </LinearLayout>
     </ScrollView>
-    <include layout="@layout/bottom_tab_layout" />
+    <com.ustc.music.view.BottomTabsLayout
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"></com.ustc.music.view.BottomTabsLayout>
 </LinearLayout>
