--- a/app/src/main/res/layout/bottom_tab_layout.xml
+++ b/app/src/main/res/layout/bottom_tab_layout.xml
@@ -17,6 +17,7 @@
                 android:layout_height="50dp"
                 android:src="@drawable/newmusic"/>
         <TextView
+            android:id="@+id/music_title"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -27,16 +28,19 @@
             android:layout_height="match_parent"
             android:gravity="end">
             <ImageView
+                android:id="@+id/music_player"
                 android:layout_width="35dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/player_to_start"/>
             <ImageView
+                android:id="@+id/music_list"
                 android:layout_width="35dp"
                 android:layout_height="match_parent"
                 android:src="@drawable/music_list"/>
         </LinearLayout>
       </LinearLayout>
     <LinearLayout
+        android:id="@+id/tabs"
         android:paddingVertical="5dp"
         android:background="@drawable/layout_top_border"
         android:layout_width="match_parent"
