--- a/app/src/main/res/layout/singers_query_item.xml
+++ b/app/src/main/res/layout/singers_query_item.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="50dp"
-    android:background="@drawable/layout_circle_border_radius_50">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="全部"
-        android:textSize="25sp"
-        android:gravity="center"
-        android:paddingHorizontal="10dp"
-        android:paddingVertical="5dp"/>
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:id="@+id/query_item_bg"
+        android:layout_width="55dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
+        android:background="@drawable/layout_white_circle_border_radius_50">
+        <TextView
+            android:id="@+id/query_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="全部"
+            android:textSize="12sp"
+            android:gravity="center"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="5dp"/>
+    </LinearLayout>
 </LinearLayout>
