--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -9,4 +9,15 @@
         <attr name="leftImg" format="integer"></attr>
         <attr name="rightImg" format="integer"></attr>
     </declare-styleable>
+    <declare-styleable name="Indicator">
+        <attr name="color" format="color|reference" />
+        <attr name="height" format="dimension|reference" />
+    </declare-styleable>
+    <declare-styleable name="Lrc">
+        <attr name="android:textSize" />
+        <attr name="normalTextColor" format="reference|color" />
+        <attr name="currentTextColor" format="reference|color" />
+        <attr name="dividerHeight" format="dimension|reference" />
+        <attr name="rows" format="integer" />
+    </declare-styleable>
 </resources>
