--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,12 +9,14 @@
     tools:context=".activity.SearchActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/goback"
             android:layout_width="25dp"
             android:layout_height="match_parent"
+            android:layout_marginVertical="10dp"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/left_arrow">
 
         </ImageView>
@@ -23,8 +25,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:queryHint="@string/searchBarHint"
-            android:iconifiedByDefault="false">
+            android:queryHint="@string/searchBarHint">
 
         </SearchView>
     </LinearLayout>
